Cycle de vie : ngOnChanges + exercice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
   <app-news-item title="{{ news.title}}" content="{{ news.content }}" (smileyClick)="appendSmiley($event)"></app-news-item>
 </div>
 
-<!-- Cycle de vie -->
+<!-- Cycle de vie - EXERCICES -->
 <app-guest-list></app-guest-list>
+<app-user-profile></app-user-profile>
